2A/05_Projet_GL/src/test/deca/context/invalid/complet/41_return_id_nondef.deca
// Description :
//   return un idenitificateur non decl 
// Resultats :
//    ligne 11 :  x identificateur non déclaré
// Historique :
//  cree le 16/01/2024

class A {

    int get() {
        return x ; 
    }
}